# timelines-takeoff-ai-2027

./: README.md  pyproject.toml
takeoff/: forecasting_takeoff.py  params.yaml  takeoff_params.yaml
timelines/: forecasting_timelines.py  params.yaml  requirements.txt  simple_forecasting_timelines.py  simple_params.yaml
timelines_may_2025_update/: forecasting_timelines.py  params.yaml  simple_params.yaml
timelines_may_2025_update/figures/: research_trajectory_data.json
